OPA-Gatekeeper/Example/disallow-privilege-container/privileged-false-container.yaml
apiVersion: v1
kind: Pod
metadata:
  name: privileged-container
  labels:
    role: privileged-container
  namespace: default
spec:
  containers:
    - image: busybox
      command:
        - sleep
        - "3600"
      imagePullPolicy: IfNotPresent
      name: privileged-container
      securityContext:
        privileged: false # true or false
  restartPolicy: Always
